<resources>
    <string name="app_name">Cash Mangement</string>
    <string name="btLancarText">Lançar</string>
    <string name="btVerLancamentosText">Ver Lançamentos</string>
    <string name="btSaldoText">Saldo</string>
    <string name="tvDataLancText">Data Lanc.:</string>
    <string name="tvValorText">Valor:</string>
    <string name="tvDetailText">Detalhe:</string>
    <string name="tvTypeText">Tipo:</string>
    <string name="textValueInsertion">Valor do lançamento</string>
    <string name="textDateInsertion">Data do lançamento</string>
    <string name="spTypeText">Tipo de lançamento </string>
    <string name="spDetailText">Detalhes do lançamento </string>
    <string name="ToastSucessText">Inserção realizada.</string>
    <string name="ValueError">Campo vazio ou zerado.</string>
    <string name="DateError">Selecionar data.</string>
    <string name="graphLegendX">Valores inseridos.</string>

</resources>